--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-body {
-    background-color: lightgray;
+#navbar {
+    background-color: #ededed;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
 }
 
-.container {
-    background-color: white;
-    max-width: 600px;
-    border-radius: 15px;
-    box-shadow: rgba(0, 0, 0, 0.35)
-                     0px 5px 15px;
-    margin: 100px auto;
-    padding: 5px 30px;
+#navbar a {
+    color: rgb(253, 0, 0);
+    text-decoration: none;
 }
