--- a/style.css
+++ b/style.css
@@ -1,28 +1,6 @@
-#navbar {
-    background-color: #ededed;
-    color: rgb(10, 2, 2);
-    display: flex;
-    justify-content: space-between;
-    padding: 16px;
-}
-
-#navbar a {
-    color: rgba(253, 0, 0, 0);
-    text-decoration: none;
-}
-
-#navbar ul {
-    display: flex;
-    list-style: none;
-    align-items: center;
-}
-
-#navbar ul li a {
-    padding: 10px;
-    margin: 0 4px;
-}
-
-#navbar ul li a:hover {
-    background-color: #fbff00;
-    border-radius: 5px;
+body {
+  margin: 20px;                 /* aby to nebylo nalepené na okraji okna */
+  background-color: white;      /* barva stránky */
+  border-radius: 25px;          /* zaoblené rohy */
+  box-shadow: 0 0 20px rgba(0,0,0,0.2); /* jemný stín okolo */
 }
