--- a/prvni/style.css
+++ b/prvni/style.css
@@ -58,3 +58,53 @@ img {
 }
 
 /
+
+
+@media (max-width: 600px) {
+  body {
+    background-color: #d4f1f9; 
+  }
+
+  #navbar {
+    background-color: #80deea; 
+  }
+}
+
+
+@media (max-width: 900px) and (min-width: 601px) {
+  body {
+    background-color: #fff8dc; 
+  }
+
+  #navbar {
+    background-color: #ffe082; 
+  }
+}
+
+
+@media (min-width: 901px) {
+  body {
+    background-color: rgb(234, 23, 23);
+  }
+
+  #navbar {
+    background-color: #ededed;
+  }
+}
+
+
+footer {
+  margin-top: 40px;
+  font-size: 0.9em;
+  padding-bottom: 20px;
+}
+
+footer a {
+  color: gray;
+  text-decoration: none;
+  margin: 0 5px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
